kubernetes/apps/media/miniflux/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`miniflux.toskbot.xyz`)
      kind: Rule
      services:
        - name: miniflux
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: miniflux.toskbot.xyz
